Image add, edit and remove endpoints
